<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/ll_base"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/W1"
              android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"/>

        <LinearLayout
            android:id="@+id/rl_page"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_last_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_wb_last_page"/>

            <TextView
                android:id="@+id/tv_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:textColor="@color/b4"
                android:textSize="@dimen/abc_f3"/>

            <ImageView
                android:id="@+id/iv_next_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_wb_next_page"/>

        </LinearLayout>


        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_round"
            android:paddingRight="5dp"
            android:scaleType="center"
            android:src="@drawable/ic_left_arrow"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/iv_recorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_wb_recorder"/>

            <ImageView
                android:id="@+id/iv_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:src="@drawable/wb_preview_xml"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_recorder_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:textColor="@color/b4"/>


        <ImageView
            android:id="@+id/iv_undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="10dp"
            android:src="@drawable/wb_undo_bg"/>


        <ImageView
            android:id="@+id/iv_redo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:src="@drawable/wb_redo_bg"/>


        <com.abc.recorderdemo.ui.WeikeWBMenu
            android:id="@+id/wb_menu_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@id/iv_redo"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tv_recorder_time"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"/>

        <FrameLayout
            android:id="@+id/fm_image_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            >

            <RelativeLayout
                android:id="@+id/rl_image_fame"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:id="@+id/fm_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"/>

                <LinearLayout
                    android:id="@+id/ll_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/abc_b9"
                    android:gravity="bottom"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tv_image_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="取消"
                        android:textColor="@color/abc_c1"
                        android:textSize="12sp"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/drag_pic"
                            android:textColor="@color/b3"
                            android:textSize="12sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:ellipsize="end"
                            android:gravity="bottom"
                            android:maxLines="1"
                            android:paddingTop="10dp"
                            android:text="@string/place_pic"
                            android:textColor="@color/b2"
                            android:textSize="14sp"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_image_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/save_str"
                        android:textColor="@color/abc_c1"
                        android:textSize="12sp"/>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/abc_b9"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_reverse_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:padding="10dp"
                        android:text="@string/reverse_level"
                        android:textColor="@color/abc_c1"
                        android:textSize="12sp"/>


                    <TextView
                        android:id="@+id/tv_tile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:padding="10dp"
                        android:text="@string/tile"
                        android:textColor="@color/abc_c1"
                        android:textSize="12sp"/>


                    <TextView
                        android:id="@+id/tv_vertical_inversion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="10dp"
                        android:text="@string/vertical_inversion"
                        android:textColor="@color/abc_c1"
                        android:textSize="12sp"/>
                </RelativeLayout>
            </RelativeLayout>
        </FrameLayout>
    </RelativeLayout>
</LinearLayout>
